updated layouts and added some HTML content for top two sections

--- a/index.html
+++ b/index.html
@@ -7,6 +7,46 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>About Us</li>
+                <li>Menu</li>
+                <li>Order Now</li>
+                <li>Blog</li>
+                <li>Location</li>
+            </ul>
+            <div class="nav-icon-placeholder"></div>
+            <div class="nav-icon-placeholder"></div>
+        </nav>
+    </header>
+    <main>
+        <section class="welcome-section">
+            <div class="left-content-container">
+                <h1>Welcome To Our Cuisine Restaurant</h1>
+                <form>
+                    <input type="text" placeholder="Search Here" />
+                    <button type="submit">Location</button>
+                </form>
+                <div class="social-links">
+                    <div class="social-icon"></div>
+                    <div class="social-icon"></div>
+                    <div class="social-icon"></div>
+                </div>
+            </div>
+        </section>
+        <section class="discover-section">
+            <div class="right-content-container">
+                <h2>Discover Our Restaurant Story</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis temporibus eum laudantium animi labore! Repellat suscipit iure, velit dicta maiores fugit magni. Porro pariatur culpa corporis eius repellendus iste optio!</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium debitis error odio ea cupiditate dignissimos nihil fugit veniam dicta vero? Vel quibusdam voluptas animi laborum totam, quasi molestiae aliquid repellendus!</p>
+                <button>Discover More</button>
+            </div>
+        </section>
+        <section class="specility-section"></section>
+        <section class="hours-section"></section>
+        <section class="testimonials-section"></section>
+    </main>
 </body>
 </html>
