added third section content and some styling

--- a/index.html
+++ b/index.html
@@ -38,13 +38,36 @@
         </section>
         <section class="discover-section">
             <div class="right-content-container">
+                <p class="micro-section-header">About Us</p>
                 <h2>Discover Our Restaurant Story</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis temporibus eum laudantium animi labore! Repellat suscipit iure, velit dicta maiores fugit magni. Porro pariatur culpa corporis eius repellendus iste optio!</p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium debitis error odio ea cupiditate dignissimos nihil fugit veniam dicta vero? Vel quibusdam voluptas animi laborum totam, quasi molestiae aliquid repellendus!</p>
                 <button>Discover More</button>
             </div>
         </section>
-        <section class="specility-section"></section>
+        <section class="speciality-section">
+            <p class="micro-section-header">Order Online Now</p>
+            <h2 class="middle-header">Our Speciality Cuisine</h2>
+            <ul>
+                <li class="speciality-menu-item">Breakfast</li>
+                <li class="speciality-menu-item">Lunch</li>
+                <li class="speciality-menu-item">Dinner</li>
+                <li class="speciality-menu-item">Dessert</li>
+                <li class="speciality-menu-item">Shake</li>
+            </ul>
+            <div class="speciality-img-container">
+                <img class="speciality-img" src="#" alt="Food picture" />
+                <img class="speciality-img" src="#" alt="Food picture" />
+                <img class="speciality-img" src="#" alt="Food picture" />
+                <img class="speciality-img" src="#" alt="Food picture" />
+            </div>
+            <div class="speciality-img-container">
+                <img class="speciality-img" src="#" alt="Food picture" />
+                <img class="speciality-img" src="#" alt="Food picture" />
+                <img class="speciality-img" src="#" alt="Food picture" />
+                <img class="speciality-img" src="#" alt="Food picture" />
+            </div>
+        </section>
         <section class="hours-section"></section>
         <section class="testimonials-section"></section>
     </main>
