feat: added basic framework and spacing and styles for the rest of the site

--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
         <section class="speciality-section">
             <p class="micro-section-header">Order Online Now</p>
             <h2 class="middle-header">Our Speciality Cuisine</h2>
-            <ul>
+            <ul class="menu-container">
                 <li class="speciality-menu-item">Breakfast</li>
                 <li class="speciality-menu-item">Lunch</li>
                 <li class="speciality-menu-item">Dinner</li>
                 <li class="speciality-menu-item">Dessert</li>
                 <li class="speciality-menu-item">Shake</li>
             </ul>
+            <br><br>
             <div class="speciality-img-container">
                 <img class="speciality-img" src="#" alt="Food picture" />
                 <img class="speciality-img" src="#" alt="Food picture" />
@@ -68,8 +69,31 @@
                 <img class="speciality-img" src="#" alt="Food picture" />
             </div>
         </section>
-        <section class="hours-section"></section>
-        <section class="testimonials-section"></section>
+        <section class="hours-section">
+            <p class="micro-section-header">Book Table</p>
+            <h2 class="middle-header">Opening Hours</h2>
+            <p class="center-paragraph">Call Now</p>
+            <p class="center-phone">+12345 678 910</p>
+            <div class="hours-container">
+                <div class="m-r-container">
+                    <p>Monday to Thursday</p>
+                    <p>09:00am - 22:00pm</p>
+                </div>
+                <div class="f-s-container">
+                    <p>Friday to Sunday</p>
+                    <p>11:00am - 20:00pm</p>
+                </div>
+            </div>
+            <div class="hours-img-container"></div>
+        </section>
+        <section class="testimonials-section">
+            <p class="micro-section-header">Testimonials</p>
+            <h2 class="middle-header">Customers Say</h2>
+            <div class="pfp-img-container"></div>
+            <p class="customer-name">John Doe</p>
+            <p class="customer-job">Art Director</p>
+            <p class="testimonial-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque iusto eaque harum vitae quasi inventore sit consectetur? Quia voluptas reprehenderit corporis architecto magni doloribus ipsum vel? Quo, rem? Voluptates, ea.</p>
+        </section>
     </main>
 </body>
 </html>
