Added welcome section content and some of the styles

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
 
+    <!-- Google font: Playfair Display (Used for headers)-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant</title>
@@ -27,5 +32,28 @@
             <li class="nav-link"><i class="fa-solid fa-magnifying-glass"></i></li>
         </ul>
     </header>
+    <!-- Welcome section -->
+    <section class="welcome-section">
+        <div class="welcome-section-left-container">
+            <h1>Welcome To Our Cuisine Restaurant</h1>
+            <input type="text" placeholder="Search here" />
+            <button>Search</button>
+            <div class="socials-container">
+                <div class="socials-grouping">
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <span>252k</span>
+                </div>
+                <div class="socials-grouping">
+                    <i class="fa-brands fa-twitter"></i>
+                    <span>62k</span>
+                </div>
+                <div class="socials-grouping">
+                    <i class="fa-brands fa-instagram"></i>
+                    <span>55k</span>
+                </div>
+            </div>
+        </div>
+        <div class="welcome-section-right-container"></div>
+    </section>
 </body>
 </html>
