--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="welcome-section-left-container">
             <h1>Welcome To Our Cuisine Restaurant</h1>
             <input type="text" placeholder="Search here" />
-            <button>Search</button>
+            <button class="section-btn">Search</button>
             <div class="socials-container">
                 <div class="socials-grouping">
                     <i class="fa-brands fa-facebook-f"></i>
@@ -54,6 +54,18 @@
             </div>
         </div>
         <div class="welcome-section-right-container"></div>
+    </section>
+    <!-- About section -->
+    <section class="about-section">
+        <div class="about-section-left-container"></div>
+        <div class="about-section-right-container">
+            <p class="section-title-small">About us</p>
+            <h2 class="section-h2">Discover Our Restaurant Story</h2>
+            <p class="section-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui saepe, consequatur porro accusamus hic eligendi delectus voluptatum iste consequuntur quia ducimus voluptate laborum illo consectetur. Voluptates, hic. Rerum, iure doloremque!</p>
+            <p class="section -description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rem, excepturi, fugiat possimus veritatis est recusandae mollitia aperiam vero ut quaerat.</p>
+            <button class="section-btn">View Menu</button>
+        </div>
+
     </section>
 </body>
 </html>
