feat: updated specialty section content and basic styles for mobile and desktop

--- a/index.html
+++ b/index.html
@@ -65,7 +65,29 @@
             <p class="section -description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rem, excepturi, fugiat possimus veritatis est recusandae mollitia aperiam vero ut quaerat.</p>
             <button class="section-btn">View Menu</button>
         </div>
-
+    </section>
+    <!-- Specialty section -->
+    <section class="specialty-section">
+        <p class="section-title-small">Order Online Now</p>
+        <h2>Our Specialty Cuisine</h2>
+        <div class="specialty-image-container">
+            <figure>
+                <img class="specialty-img" src="/assets/avocado-toast.webp" alt="" />
+                <figcaption>Our specialty scrambled eggs</figcaption>
+            </figure>
+            <figure>
+                <img class="specialty-img" src="/assets/avocado-toast.webp" alt="" />
+                <figcaption>Our world-famous turkey club</figcaption>
+            </figure>
+            <figure>
+                <img class="specialty-img" src="/assets/avocado-toast.webp" alt="" />
+                <figcaption>A candlelight steak dinner for two</figcaption>
+            </figure>
+            <figure>
+                <img class="specialty-img" src="/assets/avocado-toast.webp" alt="" />
+                <figcaption>Homemade chocolate cake</figcaption>
+            </figure>
+        </div>
     </section>
 </body>
 </html>
