feat: added content and basic styles for the other sections except for footers

--- a/index.html
+++ b/index.html
@@ -89,5 +89,40 @@
             </figure>
         </div>
     </section>
+    <!-- Hours section -->
+    <section class="hours-section">
+        <p class="section-title-small">Book Table</p>
+        <h2>Opening Hours</h2>
+        <div class="call-now-container">
+            <i class="fa-solid fa-phone"></i>
+            <p class="phone-cot">Call Now</p>
+            <p class="phone-cot">(123) 456-7890</p>
+        </div>
+        <div class="hours-times-container">
+            <div class="hours-left">
+                <p>Monday - Tuesday</p>
+                <p>09:00am - 10:00pm</p>
+            </div>
+            <div class="hours-right">
+                <p>Friday - Sunday</p>
+                <p>11:00am - 08:00pm</p>
+            </div>
+        </div>
+        <img class="hours-food-img" src="assets/fruit-bowl.jpg" alt="" />
+    </section>
+    <!-- Testimonials Section -->
+    <section class="testimonials-section">
+        <p class="section-title-small">Testimonials</p>
+        <h2>Customers Say</h2>
+        <div class="customer-container">
+            <img class="customer-pfp" src="assets/customer-pfp.png" alt="" />
+            <h3 class="customer-header">John Smith</h3>
+            <p class="customer-job-title">Art Director</p>
+        </div>
+        <div class="testimonial-container">
+            <p class="customer-rating">⭐⭐⭐⭐⭐</p>
+            <p class="customer-quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias animi sed ad ipsam, ullam eius ea aperiam minus qui dicta illo cupiditate veritatis velit. Possimus accusamus voluptate quae esse iusto!</p>
+        </div>
+    </section>
 </body>
 </html>
