Fix image source paths in index.html

--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
         <h2>Our Specialty Cuisine</h2>
         <div class="specialty-image-container">
             <figure>
-                <img class="specialty-img" src="/assets/avocado-toast.webp" alt="" />
+                <img class="specialty-img" src="assets/avocado-toast.webp" alt="" />
                 <figcaption>Our specialty scrambled eggs</figcaption>
             </figure>
             <figure>
-                <img class="specialty-img" src="/assets/avocado-toast.webp" alt="" />
+                <img class="specialty-img" src="assets/avocado-toast.webp" alt="" />
                 <figcaption>Our world-famous turkey club</figcaption>
             </figure>
             <figure>
-                <img class="specialty-img" src="/assets/avocado-toast.webp" alt="" />
+                <img class="specialty-img" src="assets/avocado-toast.webp" alt="" />
                 <figcaption>A candlelight steak dinner for two</figcaption>
             </figure>
             <figure>
-                <img class="specialty-img" src="/assets/avocado-toast.webp" alt="" />
+                <img class="specialty-img" src="assets/avocado-toast.webp" alt="" />
                 <figcaption>Homemade chocolate cake</figcaption>
             </figure>
         </div>
