feat: added more styles to header and welcome sections

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
     <section class="welcome-section">
         <div class="welcome-section-left-container">
             <h1>Welcome To Our Cuisine Restaurant</h1>
-            <input type="text" placeholder="Search here" />
-            <button class="section-btn">Search</button>
+            <div class="search-container">
+                <input class="welcome-search" type="text" placeholder="Search here" />
+                <button class="section-btn">Search</button>
+            </div>
             <div class="socials-container">
                 <div class="socials-grouping">
                     <i class="fa-brands fa-facebook-f"></i>
