feat: updated images, added extra styles

--- a/index.html
+++ b/index.html
@@ -77,18 +77,18 @@
         <div class="specialty-image-container">
             <figure>
                 <img class="specialty-img" src="assets/avocado-toast.webp" alt="" />
-                <figcaption>Our specialty scrambled eggs</figcaption>
+                <figcaption>Our specialty avocado toast and eggs</figcaption>
             </figure>
             <figure>
-                <img class="specialty-img" src="assets/avocado-toast.webp" alt="" />
+                <img class="specialty-img" src="assets/lunch-sandwich.jpg" alt="" />
                 <figcaption>Our world-famous turkey club</figcaption>
             </figure>
             <figure>
-                <img class="specialty-img" src="assets/avocado-toast.webp" alt="" />
+                <img class="specialty-img" src="assets/steak-dinner.jpg" alt="" />
                 <figcaption>A candlelight steak dinner for two</figcaption>
             </figure>
             <figure>
-                <img class="specialty-img" src="assets/avocado-toast.webp" alt="" />
+                <img class="specialty-img" src="assets/chocolate-cake.jpg" alt="" />
                 <figcaption>Homemade chocolate cake</figcaption>
             </figure>
         </div>
