--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <!-- Hours section -->
     <section class="hours-section">
         <p class="section-title-small">Book Table</p>
-        <h2>Opening Hours</h2>
+        <h2 class="section-h2">Opening Hours</h2>
         <div class="call-now-container">
             <i class="fa-solid fa-phone"></i>
             <p class="phone-cot">Call Now</p>
@@ -112,12 +112,12 @@
                 <p>11:00am - 08:00pm</p>
             </div>
         </div>
-        <img class="hours-food-img" src="assets/fruit-bowl.jpg" alt="" />
+        <img class="hours-food-img" src="assets/fruit-on-book.jpg" alt="" />
     </section>
     <!-- Testimonials Section -->
     <section class="testimonials-section">
         <p class="section-title-small">Testimonials</p>
-        <h2>Customers Say</h2>
+        <h2 class="section-h2">Customers Say</h2>
         <div class="customer-container">
             <img class="customer-pfp" src="assets/customer-pfp.png" alt="" />
             <h3 class="customer-header">John Smith</h3>
